update README, description (including authors and license), and website

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,14 @@
 Package: cccn.cfn.tools
 Title: A package for mass spec data processing
 Version: 0.0.0.9000
-Authors@R: 
-    person("Mckayl", "Bailey", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
+Authors@R:c(
+    person("Mckayl", "Bailey", email = "first.last@example.com", role = c("aut", "cre")),
+    person("Mark", "Grimes", email = "first.last@example.com", role = c("aut", "cre")),
+    person("Grant", "Smith", email = "first.last@example.com", role = c("aut", "cre")),
+    person("Madison", "Moffett", email = "first.last@example.com", role = c("aut", "cre"))
+           )
 Description: Multiple seperate functions for processing mass spec data into usable and interactive data structures
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
