make mark the only maintainer, multiple maintainer will cause github errors

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,10 +2,10 @@ Package: cccn.cfn.tools
 Title: A package for mass spec data processing
 Version: 0.0.0.9000
 Authors@R:c(
-    person("Mckayl", "Bailey", email = "first.last@example.com", role = c("aut", "cre")),
+    person("Mckayl", "Bailey", email = "first.last@example.com", role = c("aut")),
     person("Mark", "Grimes", email = "first.last@example.com", role = c("aut", "cre")),
-    person("Grant", "Smith", email = "first.last@example.com", role = c("aut", "cre")),
-    person("Madison", "Moffett", email = "first.last@example.com", role = c("aut", "cre"))
+    person("Grant", "Smith", email = "first.last@example.com", role = c("aut")),
+    person("Madison", "Moffett", email = "first.last@example.com", role = c("aut"))
            )
 Description: Multiple seperate functions for processing mass spec data into usable and interactive data structures
 License: GPL (>= 3)
