--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,4 +15,4 @@ export(genepep.edges.3)
 export(get.gene.names.from.peps)
 export(process_correlation_edges)
 export(process_ptms_data)
-export(zero.to.NA)
+export(zero.to.NA.func)
